--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a_",
   "version": "0.0.1",
   "description": "Non-blocking, asynchronous helper functions for Node.js",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "example": "example"
   },
